# rjrssync

./: .gitignore  Cargo.toml  LICENSE.md  README.md  benchmark-results-windows-2023-01-02-12-47-03446f64ec6d0aa14c73127f5c80f0e0050cb771.json  benchmark-results-windows-2023-01-02-12-55-b2505c6446c84383e9c46bbd91da80aedb1debb5.json  benchmark-results-windows-2023-01-02-13-20-127ca5f54c8605f9f872548a1157f2b595981863.json  benchmark-results-windows-2023-01-02-13-23-e04187ac0371a1e57d239dbac6ecd806262b9032.json  benchmark-results-windows-2023-01-02-13-47-5458e1deae5590002d1dd6d23c65d3efcc1bd3c6.json  benchmark-results-windows-2023-01-02-15-34-2930a57b16cfec73cd00c0bfe2cce5f48e362288.json  benchmark-results-windows-2023-01-02-16-00-6bcf33458190b31da3b53ffb9a4a47de9cb16b8a.json  benchmark-results-windows-2023-01-02-17-46-401781e69f742b3739b4699f5a22d1d821acf2b2.json  benchmark-results-windows-2023-01-02-17-59-9e0b6b84be902aa48b2ae566a975bb2a3f35b1af.json  benchmark-results-windows-2023-01-02-19-29-0d7469e1dd8879b16c529e7511e72b4f904e9b8e.json  benchmark-results-windows-2023-01-03-04-41-127ca5f54c8605f9f872548a1157f2b595981863.json  benchmark-results-windows-2023-01-03-08-39-aadf22b1b81a0c08eff04bf91020ac0c2e2ed56b.json  benchmark-results-windows-2023-01-04-08-25-aadf22b1b81a0c08eff04bf91020ac0c2e2ed56b.json  benchmark-results-windows-2023-01-04-18-23-5f60434a435df2d9ae6a92e20e94ccf8ee9c51d4.json  benchmark-results-windows-2023-01-05-08-43-c9f35de1c0b18bb3572d2f4b31bd38f449f95cf8.json  benchmark-results-windows-2023-01-06-08-50-012cbfef220740a72a358031f5a85872a72e5e91.json  benchmark-results-windows-2023-01-07-04-43-012cbfef220740a72a358031f5a85872a72e5e91.json  benchmark-results-windows-2023-01-07-11-55-cdd35b7944dff14ac42f24dd8cd1915f01143f54.json  benchmark-results-windows-2023-01-07-20-08-5f90a60250cca80f63a6401518a0c100835e10a5.json  benchmark-results-windows-2023-01-08-04-44-5f90a60250cca80f63a6401518a0c100835e10a5.json  benchmark-results-windows-2023-01-09-04-46-5f90a60250cca80f63a6401518a0c100835e10a5.json  benchmark-results-windows-2023-01-10-04-50-5f90a60250cca80f63a6401518a0c100835e10a5.json  benchmark-results-windows-2023-01-11-04-46-5f90a60250cca80f63a6401518a0c100835e10a5.json  benchmark-results-windows-2023-01-11-19-23-24310ae8f10e8818678105dfe8c6548f88e5a2ae.json  benchmark-results-windows-2023-01-12-04-48-24310ae8f10e8818678105dfe8c6548f88e5a2ae.json  benchmark-results-windows-2023-01-12-18-51-16d226b762feb83c2946c2ad238c4598e08ed047.json  benchmark-results-windows-2023-01-13-04-45-16d226b762feb83c2946c2ad238c4598e08ed047.json  benchmark-results-windows-2023-01-13-08-25-eac8eb2bf0740d47f3b8499ecaa097fa48e1a6cb.json  benchmark-results-windows-2023-01-13-08-31-de5a7e03cd05fb1c44002aafcfd6ac368e952384.json  benchmark-results-windows-2023-01-13-08-58-ea05b647ce6d38a23c106e55e00efc38a5bc0c6a.json  benchmark-results-windows-2023-01-13-09-01-ae449a7ae30fead7bca9a46bb4fe751c26a4a1f3.json  benchmark-results-windows-2023-01-13-18-41-435aacdebee10b92a32d699dfb2d6e851f8829cd.json  benchmark-results-windows-2023-01-13-18-44-fefbb75db267d6d29219530393f00c161c702b22.json  benchmark-results-windows-2023-01-13-18-49-ed87b79ae3a5d836d617e8b178da0beb59700943.json  benchmark-results-windows-2023-01-13-19-48-1f54332c7f181401421020846c85e9fd8b9a9e32.json  benchmark-results-windows-2023-01-13-19-51-17e83d682de62e2c87438556a1b62e1d5091ff96.json  (+1058 more)
.cargo/: config.toml
.github/workflows/: generate-benchmark-graphs.py  native.yml  post-commit.yml  release.yml  rust.yml  windows-with-wsl.yml
benches/: benchmarks.rs
docs/: notes.md  todo.md
examples/: piper.rs  tcper.rs  walker.rs
src/: boss.rs  boss_deploy.rs  boss_doer_interface.rs  boss_frontend.rs  boss_launch.rs  boss_progress.rs  boss_sync.rs  doer.rs  embedded_binaries.rs  encrypted_comms.rs  entries_list.rs  exe_utils.rs  histogram.rs  logger_and_progress.rs  main.rs  memory_bound_channel.rs  ordered_map.rs  parallel_walk_dir.rs  primary.rs  profiling.rs  root_relative_path.rs  secondary.rs
src/profiling/: mod.rs  profiling_fake.rs  profiling_real.rs
tests/: filesystem_node.rs  test_utils.rs  usage_tests.rs
tests/usage_tests/: dest_entry_needs_deleting.rs  dest_entry_needs_deleting_tests.rs  dest_file_newer_tests.rs  dest_file_older_tests.rs  dest_root_needs_deleting_tests.rs  files_same_time_tests.rs  filter_tests.rs  main.rs  misc_tests.rs  remote_tests.rs  symlink_tests.rs  sync_tests.rs  test_framework.rs  trailing_slash_tests.rs
